--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
 	<!-- SweetAlert 2 -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.17/dist/sweetalert2.all.min.js"></script>
 	<link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
-	
+
 	<title>Proyecto Final - Uciel Sola</title>
 </head>
 
@@ -395,8 +395,8 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
+	<script type="module" src="character.js"></script>
 	<script src="app.js"></script>
-	<!-- <script src="main.js"></script> -->
 </body>
 
 </html>
