--- a/main/index.html
+++ b/main/index.html
@@ -396,7 +396,7 @@
 
 
 	<script src="app.js"></script>
-	<!-- <script src="main.js"></script> -->
+	<script src="character.js"></script>
 </body>
 
 </html>
