--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
 	<!-- SweetAlert 2 -->
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.17/dist/sweetalert2.all.min.js"></script>
 	<link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
-	
+
 	<title>Proyecto Final - Uciel Sola</title>
 </head>
 
@@ -51,6 +51,13 @@
 			<span>Stealth :</span><span class="value" id="stealthValue">10</span> <br>
 			<span>Charisma :</span><span class="value" id="charValue">10</span> <br>
 			<span>Luck :</span><span class="value" id="luckValue">10</span>
+		</div>
+		<div class="github">
+			<!-- Place this tag where you want the button to render. -->
+			<a class="github-button" href="https://github.com/ucielsola"
+				data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large"
+				aria-label="Follow @ucielsola on GitHub">Follow @ucielsola</a>
+
 		</div>
 	</div>
 
@@ -397,6 +404,8 @@
 
 	<script src="app.js"></script>
 	<script src="character.js"></script>
+
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
