fixed background image path added github download button

--- a/main/index.html
+++ b/main/index.html
@@ -53,10 +53,14 @@
 			<span>Luck :</span><span class="value" id="luckValue">10</span>
 		</div>
 		<div class="github">
-			<!-- Place this tag where you want the button to render. -->
+
 			<a class="github-button" href="https://github.com/ucielsola"
 				data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large"
-				aria-label="Follow @ucielsola on GitHub">Follow @ucielsola</a>
+				aria-label="Follow @ucielsola on GitHub">@ucielsola</a>
+
+			<a class="github-button" href="https://github.com/ucielsola/lotr-character-creator/archive/HEAD.zip"
+				data-color-scheme="no-preference: light; light: dark; dark: dark;" data-icon="octicon-download"
+				data-size="large" aria-label="Download ucielsola/lotr-character-creator on GitHub">Download</a>
 
 		</div>
 	</div>
