fixed easter egg img

--- a/main/index.html
+++ b/main/index.html
@@ -75,7 +75,7 @@
 				<h2>Character Builder</h2>
 			</div>
 			<div class="card-buttons">
-				<a href="print-character.html" target="_blank"><button class="button" title="Saved Characters">Saved
+				<a href="print-character.html" target="_blank" id="print"><button class="button" title="Saved Characters">Saved
 						Characters</button></a>
 				<button class="button" title="Create Character" id="toStage1">Create Character</button>
 			</div>
