--- a/main/index.html
+++ b/main/index.html
@@ -25,7 +25,9 @@
 	<!--          SIDEBAR            -->
 
 	<div class="sidebar" id="sidebar">
-		<img src="img/avatars/placeholder.png" id="avatar">
+		<div class="av-container">
+			<img src="img/avatars/placeholder.png" id="avatar">
+		</div>
 		<div class="mods">
 			<img src="img/classes/placeholder.png" alt="" class="mod-img" id="classImg">
 			<img src="img/backgrounds/placeholder.png" alt="" class="mod-img" id="backImg">
@@ -52,23 +54,24 @@
 			<span>Charisma :</span><span class="value" id="charValue">10</span> <br>
 			<span>Luck :</span><span class="value" id="luckValue">10</span>
 		</div>
-		<div class="github">
 
-			<a class="github-button" href="https://github.com/ucielsola"
-				data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large"
-				aria-label="Follow @ucielsola on GitHub">@ucielsola</a>
-
-			<a class="github-button" href="https://github.com/ucielsola/lotr-character-creator/archive/HEAD.zip"
-				data-color-scheme="no-preference: light; light: dark; dark: dark;" data-icon="octicon-download"
-				data-size="large" aria-label="Download ucielsola/lotr-character-creator on GitHub">Download</a>
-
-		</div>
 	</div>
 
 	<!--          BODY            -->
+	<div class="github">
 
+		<a class="github-button" href="https://github.com/ucielsola"
+			data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large"
+			aria-label="Follow @ucielsola on GitHub">@ucielsola</a>
+
+		<a class="github-button" href="https://github.com/ucielsola/lotr-character-creator/archive/HEAD.zip"
+			data-color-scheme="no-preference: light; light: dark; dark: dark;" data-icon="octicon-download"
+			data-size="large" aria-label="Download ucielsola/lotr-character-creator on GitHub">Download</a>
+
+	</div>
 	<div class="page-body" id="cardWrapper">
 		<img src="img/easter.gif" alt="Click Me!" id="easterEgg" class="rotate-scale-up ">
+		
 		<div class="card show-card" id="stage0">
 			<div class="card-title">
 				<h1>Lord of the Rings RPG</h1>
