fixed print page layout

--- a/main/print-character.html
+++ b/main/print-character.html
@@ -28,11 +28,13 @@
         <div class="block1">
             <span class="inline"><img id="avatar" src="img/avatars/placeholder.png" alt=""></span>
             <span id="header" class="border padding">
-                <span class="title">NAME</span>
-                <span class="title race">RACE</span> <br>
-
-                <span id="name"></span>
+                <span class="uno"><span class="title">NAME</span> <br>
+                <span id="name"></span></span>
+                <span class="dos">
+                    <span class="title race">RACE</span>
+                    <br>
                 <span id="race" class='race'></span>
+                </span>
                 <span>
                     <ul id="raceUl"></ul>
                 </span><br>
