added disclaimer for small screens

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="disclaimer">
 			<h3>About this project</h3>
 			<p>Hi! This is the first website I've ever made. So, by that time, I hadn't any clue about responsive design, mobile
-				first, or whatsoever. This 'Lord Of the Rings Character Creator' will not work on small screens (mobile devices),
+				first, or whatsoever. This <span>'Lord Of the Rings Character Creator'</span> will <span>not work on small screens</span> (mobile devices),
 				sorry for that.</p>
 				<p>You can search on my portfolio for other (more recent) projects at <a href="https://ucielsola.com">UcielSola.com</a></p>
 		</div>
